--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "content_scripts": [
       {
         "matches": ["*://*.youtube.com/*"],
-        "js": ["main.js"]
+        "js": ["main.js"],
+        "css": ["thumbnail.css"]
       }
     ],
 
