--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,10 @@
       }
     ],
 
-    "permissions": ["storage"],
+    "icons": {
+      "48": "icons/icon48.png",
+      "96": "icons/icon96.png"
+    },
+
+    "permissions": ["storage"]
   }
