Extension now runs event_handler automatically

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "content_scripts": [
       {
         "matches": ["*://*.youtube.com/*"],
-        "run_at": "document_idle",
+        "run_at": "document_end",
         "js": ["main.js"],
         "css": ["lowercase.css"]
       }
