--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
 
     "icons": {
       "48": "icons/icon48.png",
-      "96": "icons/icon96.png"
+      "96": "icons/icon96.png",
+      "128": "icons/icon128.png"
     },
 
     "permissions": ["storage"]
